--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,26 @@
+alembic==1.5.8
+asyncpg==0.22.0
+autopep8==1.5.7
 click==7.1.2
+databases==0.4.3
 dnspython==2.1.0
 email-validator==1.1.1
 fastapi==0.63.0
 h11==0.12.0
 idna==3.1
+Mako==1.1.4
+MarkupSafe==1.1.1
+mypy==0.812
+mypy-extensions==0.4.3
+pycodestyle==2.7.0
 pydantic==1.8.1
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-editor==1.0.4
+six==1.15.0
+SQLAlchemy==1.3.24
 starlette==0.13.6
+toml==0.10.2
+typed-ast==1.4.3
 typing-extensions==3.10.0.0
 uvicorn==0.13.4
