--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ Mako==1.1.4
 MarkupSafe==1.1.1
 mypy==0.812
 mypy-extensions==0.4.3
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pydantic==1.8.1
 python-dateutil==2.8.1
