--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,41 @@
 alembic==1.5.8
+asgi-lifespan==1.0.1
 asyncpg==0.22.0
+attrs==20.3.0
 autopep8==1.5.7
+certifi==2020.12.5
 click==7.1.2
 databases==0.4.3
 dnspython==2.1.0
 email-validator==1.1.1
 fastapi==0.63.0
+flake8==3.9.1
 h11==0.12.0
+httpcore==0.13.2
+httpx==0.18.1
 idna==3.1
+iniconfig==1.1.1
 Mako==1.1.4
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mypy==0.812
 mypy-extensions==0.4.3
+packaging==20.9
+pluggy==0.13.1
 psycopg2-binary==2.8.6
+py==1.10.0
 pycodestyle==2.7.0
 pydantic==1.8.1
+pyflakes==2.3.1
+pyparsing==2.4.7
+pytest==6.2.3
+pytest-asyncio==0.15.1
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-editor==1.0.4
+rfc3986==1.4.0
 six==1.15.0
+sniffio==1.2.0
 SQLAlchemy==1.3.24
 starlette==0.13.6
 toml==0.10.2
