--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     volumes:
-      - ./backend/app:/app
+      - ./backend:/backend
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     env_file:
       - ./backend/.env
