--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,13 @@ asgi-lifespan==1.0.1
 asyncpg==0.22.0
 attrs==20.3.0
 autopep8==1.5.7
+bcrypt==3.2.0
 certifi==2020.12.5
+cffi==1.14.5
 click==7.1.2
 databases==0.4.3
 dnspython==2.1.0
+ecdsa==0.14.1
 email-validator==1.1.1
 fastapi==0.63.0
 flake8==3.9.1
@@ -21,10 +24,13 @@ mccabe==0.6.1
 mypy==0.812
 mypy-extensions==0.4.3
 packaging==20.9
+passlib==1.7.4
 pluggy==0.13.1
 psycopg2-binary==2.8.6
 py==1.10.0
+pyasn1==0.4.8
 pycodestyle==2.7.0
+pycparser==2.20
 pydantic==1.8.1
 pyflakes==2.3.1
 pyparsing==2.4.7
@@ -33,7 +39,10 @@ pytest-asyncio==0.15.1
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-editor==1.0.4
+python-jose==3.2.0
+python-multipart==0.0.5
 rfc3986==1.4.0
+rsa==4.7.2
 six==1.15.0
 sniffio==1.2.0
 SQLAlchemy==1.3.24
