--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONBUFFERED 1
 # install system dependencies
 RUN apt-get update \
-    && apt-get -y install netcat gcc\
+    && apt-get -y install netcat gcc at\
     && apt-get clean
 # install python dependencies
 RUN pip install --upgrade pip
