--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.5.8
 amqp==5.0.6
+APScheduler==3.7.0
 asyncpg==0.22.0
 attrs==20.3.0
 autopep8==1.5.7
 bcrypt==3.2.0
 billiard==3.6.4.0
+celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.5
 click==7.1.2
@@ -17,6 +19,7 @@ ecdsa==0.14.1
 email-validator==1.1.1
 fastapi==0.63.0
 flake8==3.9.1
+greenlet==1.1.0
 h11==0.12.0
 httpcore==0.13.2
 idna==3.1
@@ -46,15 +49,17 @@ python-editor==1.0.4
 python-jose==3.2.0
 python-multipart==0.0.5
 pytz==2021.1
+redis==3.5.3
 rfc3986==1.4.0
 rsa==4.7.2
 six==1.15.0
 sniffio==1.2.0
-SQLAlchemy==1.3.24
+SQLAlchemy==1.4.14
 starlette==0.13.6
 toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.10.0.0
+tzlocal==2.1
 uvicorn==0.13.4
 vine==5.0.0
 wcwidth==0.2.5
