--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 services:
+  redis:
+    image: redis
+    networks:
+      - backend_network
   server:
     build:
       context: ./backend
@@ -13,6 +17,9 @@ services:
       - 8000:8000
     depends_on: 
       - db
+      - redis
+    networks: 
+      - backend_network
 
   db:
     image: postgres:13-alpine
@@ -22,5 +29,10 @@ services:
       - ./backend/.env
     ports:
       - 5432:5432
+    networks:
+      - backend_network
 volumes:
   postgres_data:
+  
+networks: 
+  backend_network:
