--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ billiard==3.6.4.0
 celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
@@ -22,14 +23,12 @@ flake8==3.9.1
 greenlet==1.1.0
 h11==0.12.0
 httpcore==0.13.2
-idna==3.1
+idna==2.10
 iniconfig==1.1.1
 kombu==5.0.2
 Mako==1.1.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
-mypy==0.812
-mypy-extensions==0.4.3
 packaging==20.9
 passlib==1.7.4
 pluggy==0.13.1
@@ -50,6 +49,7 @@ python-jose==3.2.0
 python-multipart==0.0.5
 pytz==2021.1
 redis==3.5.3
+requests==2.25.1
 rfc3986==1.4.0
 rsa==4.7.2
 six==1.15.0
@@ -60,6 +60,7 @@ toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.10.0.0
 tzlocal==2.1
+urllib3==1.26.4
 uvicorn==0.13.4
 vine==5.0.0
 wcwidth==0.2.5
